# paraphrasing_bot

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
database/: Dockerfile
docker/redis/: redis.conf
paraphrasing_bot/: app.py
paraphrasing_bot/src/applications/: Bootstrap.py
paraphrasing_bot/src/domain/constants/: App.py
paraphrasing_bot/src/domain/exceptions/: HandledWithMessageException.py
paraphrasing_bot/src/repositories/: BaseModel.py
paraphrasing_bot/src/repositories/mixin/: SerializeMixin.py  TimestampsMixin.py
paraphrasing_bot/src/routes/: generic.py
paraphrasing_bot/src/services/: Config.py  Queue.py  Redis.py  RequestsBearerAuth.py  String.py
paraphrasing_bot/templates/: verify_account.html
tests/: test_paraphrasing_bot.py
